// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Well DefaultWell renders 1`] = `
<React.Fragment>
  <h2
    id="default-well"
  >
    Default well
  </h2>
  <p>
    Use the 
    <code
      className="token property"
    >
      .well
    </code>
     as a simple effect on an element to give it an inset effect.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="well"
    >
      Look ma, im in a well!
    </div>
  </ComponentPreview>
</React.Fragment>
`;

exports[`Components: Well WellSizes renders 1`] = `
<React.Fragment>
  <h2
    id="well-sizes"
  >
    Well sizes
  </h2>
  <p>
    Use the two optional 
    <code
      className="token property"
    >
      .well-sm
    </code>
     and 
    <code
      className="token property"
    >
      .well-lg
    </code>
     classes to control padding and rounded corners.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="well well-sm"
    >
      Look ma, im in a small well!
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="well well-lg"
    >
      Look ma, im in a large well!
    </div>
  </ComponentPreview>
</React.Fragment>
`;

exports[`Components: Well WellText renders 1`] = `
<div
  className="col-md-12 col-lg-10 doc-body"
>
  <ExperimentalComponentAlert />
  <p
    className="lead"
  >
    Well well well, look what the cat dragged in...
  </p>
  <DefaultWell />
  <WellSizes />
</div>
`;

exports[`Components: Well renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <WellText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
